<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:background="@color/backgroundSecondary"
    android:paddingBottom="@dimen/small_spacing">

    <com.blockchain.componentlib.sheets.SheetNubView
        android:id="@+id/recurring_buy_sheet_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/tiny_spacing"  />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/Text.Semibold.20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/title"
        android:layout_marginStart="@dimen/standard_spacing"
        android:layout_marginTop="@dimen/standard_spacing"
        android:layout_marginBottom="@dimen/standard_spacing"
        android:text="@string/recurring_buy_selection_title" />

    <RadioGroup
        android:id="@+id/recurring_buy_selection_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_spacing"
        android:layout_marginEnd="@dimen/standard_spacing">

        <RadioButton
            android:id="@+id/rb_one_time"
            style="@style/Text.Semibold.16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/title"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
            android:drawablePadding="@dimen/small_spacing"
            android:paddingTop="@dimen/very_small_spacing"
            android:paddingBottom="@dimen/very_small_spacing"
            android:text="@string/recurring_buy_one_time_selector"
            android:visibility="gone"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/rb_daily"
            style="@style/Text.Semibold.16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/title"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
            android:drawablePadding="@dimen/small_spacing"
            android:paddingTop="@dimen/very_small_spacing"
            android:paddingBottom="@dimen/very_small_spacing"
            android:text="@string/recurring_buy_daily_selector"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            style="@style/Text.Semibold.16"
            android:textColor="@color/title"
            android:layout_height="wrap_content"
            android:text="@string/recurring_buy_weekly_selector" />

        <RadioButton
            android:id="@+id/rb_weekly"
            android:layout_width="match_parent"
            android:textColor="@color/body"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
            android:drawablePadding="@dimen/small_spacing"
            android:paddingBottom="@dimen/very_small_spacing"
            android:visibility="gone"
            tools:text="on Mondays"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/title"
            style="@style/Text.Semibold.16"
            android:text="@string/recurring_buy_bi_weekly_1" />

        <RadioButton
            android:id="@+id/rb_bi_weekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/body"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
            android:drawablePadding="@dimen/small_spacing"
            android:paddingBottom="@dimen/very_small_spacing"
            android:visibility="gone"
            tools:text="On day 14 and 28"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/title"
            style="@style/Text.Semibold.16"
            android:text="@string/recurring_buy_monthly_selector" />

        <RadioButton
            android:id="@+id/rb_monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/body"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
            android:drawablePadding="@dimen/small_spacing"
            android:paddingBottom="@dimen/very_small_spacing"
            android:visibility="gone"
            tools:text="On day 14"
            tools:visibility="visible" />
    </RadioGroup>

    <com.blockchain.componentlib.button.PrimaryButtonView
        android:id="@+id/recurring_buy_select_cta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_spacing"
        android:layout_marginTop="@dimen/small_spacing"
        android:text="@string/common_ok"
        android:textAllCaps="true" />

</LinearLayout>