<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/payment_method_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/standard_spacing"
    android:background="@drawable/bkgd_grey_000_rounded"
    android:paddingBottom="@dimen/small_spacing">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/payment_method_title"
        style="@style/Text.Semibold.16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_spacing"
        android:layout_marginTop="@dimen/small_spacing"
        android:textColor="@color/title"
        android:layout_marginEnd="@dimen/small_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/bank_transfer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/instructions"
        style="@style/Text.Light.12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_spacing"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/standard_spacing"
        android:text="@string/payment_methods_bank_transfer"
        android:textColor="@color/body"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_method_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/make_a_deposit"
        style="@style/Text.Light.12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_spacing"
        android:layout_marginEnd="@dimen/standard_spacing"
        android:text="@string/payment_methods_make_deposit"
        android:textColor="@color/primary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructions" />

</androidx.constraintlayout.widget.ConstraintLayout>
