<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/locker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_spacing"
                android:contentDescription="@string/password_required"
                android:tint="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_lock" />

            <TextView
                android:id="@+id/password_required_label"
                style="@style/TextAppearance.Blockchain.Title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/title"
                android:layout_marginHorizontal="@dimen/xhuge_spacing"
                android:layout_marginTop="@dimen/standard_spacing"
                android:contentDescription="@string/password_required"
                android:text="@string/password_required"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/locker" />


            <com.blockchain.componentlib.controls.TextInputView
                android:id="@+id/wallet_identifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/standard_spacing"
                android:layout_marginVertical="@dimen/huge_spacing"
                android:contentDescription="@string/wallet_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_required_label"
                tools:text="d7be7cce-b2fe-46b7-afc1-8cf56dde81f4" />

            <TextView
                android:id="@+id/text_logged_out"
                style="@style/TextAppearance.Blockchain.Caption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/huge_spacing"
                android:textColor="@color/body"
                android:layout_marginTop="@dimen/smallest_spacing"
                android:contentDescription="@string/logged_out_enter_password"
                android:text="@string/logged_out_enter_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wallet_identifier" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/password_label"
                style="@style/TextAppearance.Blockchain.Paragraph2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/title"
                android:layout_marginStart="@dimen/standard_spacing"
                android:layout_marginTop="@dimen/small_spacing"
                android:layout_marginEnd="@dimen/standard_spacing"
                android:contentDescription="@string/password"
                android:paddingVertical="@dimen/minuscule_spacing"
                android:text="@string/password"
                app:layout_constraintTop_toBottomOf="@id/text_logged_out" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_spacing"
                android:layout_marginEnd="@dimen/standard_spacing"
                android:hint="@string/password_input_hint"
                app:boxStrokeColor="@color/text_input_color_states"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/grey_400"
                app:expandedHintEnabled="false"
                app:hintEnabled="false"
                app:hintTextAppearance="@style/TextAppearance.Blockchain.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_input_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/button_recover"
                style="@style/TextAppearance.Blockchain.Caption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/huge_spacing"
                android:layout_marginTop="@dimen/smallest_spacing"
                android:contentDescription="@string/forgot_password_label"
                android:text="@string/forgot_password_label"
                android:textColor="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_password" />

            <com.blockchain.componentlib.button.PrimaryButtonView
                android:id="@+id/button_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/standard_spacing"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/btn_continue"
                android:paddingVertical="@dimen/tiny_spacing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_recover" />

            <TextView
                android:id="@+id/logged_out_forget_wallet_label"
                style="@style/TextAppearance.Blockchain.Caption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_spacing"
                android:layout_marginTop="@dimen/small_spacing"
                android:textColor="@color/body"
                android:layout_marginEnd="@dimen/standard_spacing"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/logged_out_forget_wallet"
                android:text="@string/logged_out_forget_wallet"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/button_forget"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_continue"
                app:layout_constraintVertical_bias="1" />

            <com.blockchain.componentlib.button.MinimalErrorButtonView
                android:id="@+id/button_forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/standard_spacing"
                android:layout_marginBottom="@dimen/standard_spacing"
                android:contentDescription="@string/wipe_wallet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>